--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ html {
     margin-top: 0;
 }
 
+body{
+    margin: 0;
+}
 
 /*--------------------------------------------------------------
 Page Header
@@ -186,19 +189,29 @@ content single area
 }
 
 
-.single-area-post-catalogue-ul {
+.single-area-post-catalogue li {
     white-space: nowrap;
     list-style: decimal;
 }
 
-.single-area-post-catalogue-ul ol {
+ol {
     list-style: decimal;
 }
 
 /*footer*/
 .footer-area {
-    width: 100%;
     background: #33363b;
     height: 150px;
-    margin-top: 50px;
+    margin-top: 30px;
+    display: flex;
+}
+
+.footer-area-copyright {
+    width: 1124px;
+    margin: 0 auto;
+}
+
+
+.footer-area-copyright p {
+    color: white;
 }
