--- a/style.css
+++ b/style.css
@@ -198,12 +198,16 @@ content single area
 
 
 /*catalogue*/
-.single-area-post-sidebar-container-left {
-    float: right;
+.single-area-template{
     display: flex;
-    flex-direction: column;
+}
+
+
+.single-area-post-sidebar-container-left {
     width: 100px;
 }
+
+
 
 .single-area-post-catalogue {
     width: fit-content;
@@ -211,7 +215,6 @@ content single area
     background: white;
     box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
-    position: fixed;
 }
 
 
