--- a/style.css
+++ b/style.css
@@ -46,6 +46,23 @@ index.php
     margin: 0 auto;
 }
 
+/*--------------------------------------------------------------
+single.php
+--------------------------------------------------------------*/
+.single-container{
+    max-width: 1600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.single-container-section{
+    width: 80%;
+}
+
+.single-container-sidebar{
+    width: 20%;
+}
 
 
 /*--------------------------------------------------------------
@@ -153,43 +170,41 @@ content.php
     color: #9b9595;
 }
 
+
 /*--------------------------------------------------------------
-content single area
+content-single.php
 --------------------------------------------------------------*/
-.single-area-post {
+.content-single-container-article {
     display: flex;
     max-width: 1120px;
     position: relative;
-    margin: 0px auto;
-}
-
-.single-area-post-content {
-    width: 1120px;
+    margin: 0 auto;
+    flex-direction: column;
     background: white;
-    height: auto;
     box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
-    display: flex;
-    flex-direction: column;
 }
 
-.single-area-post-content-header {
+
+.content-single-container-article-content-header {
     text-align: center;
     font-size: 40px;
     line-height: 44px;
     letter-spacing: 0.5px;
 }
 
-.single-area-post-content-content {
+.content-single-container-article-content {
     margin-left: 30px;
     margin-right: 30px;
 }
 
-.single-area-post-content-content figure {
+.content-single-container-article-content figure {
     border-radius: 8px;
+    text-align: center;
+
 }
 
-.single-area-post-content-content img {
+.content-single-container-article-content figure img {
     box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
     background-size: cover;
     height: auto;
@@ -198,14 +213,11 @@ content single area
 
 
 /*catalogue*/
-.single-area-template{
+.content-single-container{
     display: flex;
 }
 
 
-.single-area-post-sidebar-container-left {
-    width: 100px;
-}
 
 .single-area-post-catalogue {
     width: fit-content;
