--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@ HTML
 --------------------------------------------------------------*/
 html {
     margin-top: 0;
+    scroll-behavior: smooth;
 }
 
 body {
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 .blog {
@@ -298,9 +300,4 @@ sidebar-catalogue.php
     font-size: .95rem;
     line-height: 0;
     color: #808080;
-}
-
-.sidebar-catalogue-content a:focus{
-    color: #3b8dbd;
-    font-size: 1.05rem;
 }
