--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ slider area
 /*--------------------------------------------------------------
 header area category
 --------------------------------------------------------------*/
-.category-area {
+.header-navigation-container{
     width: 1120px;
     height: 50px;
     background: #3983c2;
@@ -139,7 +139,14 @@ header area category
     align-items: center;
 }
 
-.category-area a {
+.header-navigation-container-ul{
+    display: flex;
+    justify-content: flex-start;
+    list-style: none;
+}
+
+
+.header-navigation-container a {
     margin-left: 10px;
     color: white;
 }
@@ -237,47 +244,47 @@ content-single.php
 }
 
 /*pre*/
-/*pre {*/
-/*    max-width: 100%;*/
-/*    overflow: auto;*/
-/*    padding: 20px;*/
-/*    white-space: pre-wrap;*/
-/*    word-wrap: break-word;*/
-/*    background-color: #e1e1e1;*/
-/*}*/
+pre {
+    max-width: 100%;
+    overflow: auto;
+    padding: 20px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    background-color: #e1e1e1;
+}
 
 
-/*table {*/
-/*    border-collapse: separate;*/
-/*    border-spacing: 0;*/
-/*    border-width: 1px 0 0 1px;*/
-/*    margin-bottom: 24px;*/
-/*    width: 100%;*/
-/*    font-size: 14px;*/
-/*}*/
+table {
+    border-collapse: separate;
+    border-spacing: 0;
+    border-width: 1px 0 0 1px;
+    margin-bottom: 24px;
+    width: 100%;
+    font-size: 14px;
+}
 
-/*table, th, td {*/
-/*    border-width: 1px;*/
-/*    border-style: solid;*/
-/*    border-color: #e1e1e1;*/
-/*}*/
+table, th, td {
+    border-width: 1px;
+    border-style: solid;
+    border-color: #e1e1e1;
+}
 
-/*th, td {*/
-/*    text-align: left;*/
-/*    padding: 8px;*/
+th, td {
+    text-align: left;
+    padding: 8px;
 
-/*}*/
+}
 
-/*th {*/
-/*    border-width: 0 1px 1px 0;*/
-/*    font-weight: bold;*/
-/*    background-color: #00a0d2;*/
+th {
+    border-width: 0 1px 1px 0;
+    font-weight: bold;
+    background-color: #00a0d2;
 
-/*}*/
+}
 
-/*td {*/
-/*    border-width: 0 1px 1px 0;*/
-/*}*/
+td {
+    border-width: 0 1px 1px 0;
+}
 
 
 /*footer*/
