--- a/style.css
+++ b/style.css
@@ -485,5 +485,65 @@ comments.php
 }
 
 .comment-respond{
-    padding-left: 40px;
+    max-width: 1120px;
+    position: relative;
+    margin: 0 auto;
 }
+
+.comment-reply-title{
+    margin: 0 auto;
+    text-align: center;
+    background: #f1f1f1;
+}
+
+.comment-notes{
+    display: none;
+}
+
+
+#submit{
+    background: #16cfc1;
+    color: #fff;
+    padding: 10px 10px;
+    font-weight: 600;
+    display: inline-block;
+    border: none;
+    cursor: pointer;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+}
+
+#commentform {
+    padding: 10px 20px 20px;
+    margin-bottom: 15px;
+    -webkit-border-radius: 2px;
+    background: white;
+    box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    position: relative;
+    left: 0;
+}
+
+.logged-in-as,
+.comment-notes,
+.form-allowed-tags { display: none; }
+#respond { position: relative; }
+li #reply-title { font-size: 0; margin: 0!important; padding: 0; height: 0; border-top: 0; }
+#cancel-comment-reply-link { color: #999; display: block; position: absolute; bottom: 26px; right: 20px; font-size: 0.75em; }
+#cancel-comment-reply-link:hover { color: #777; }
+#reply-title {margin-bottom: 20px;}
+#commentform p.comment-form-author { width: 48%; float: left; }
+#commentform p.comment-form-email { width: 48%; float: right; }
+#commentform p.comment-form-url,
+#commentform p.comment-form-comment { clear: both; }
+#commentform label { padding: 6px 0; font-weight: 600; display: block; }
+#commentform .comment-form-cookies-consent { padding: 10px 0; clear:both }
+#commentform .comment-form-cookies-consent label { display: inline; }
+#commentform input[type="text"],
+#commentform input[type="email"],
+#commentform textarea { max-width: 100%; width: 100%; }
+#commentform textarea { height: 100px; }
+#commentform p.form-submit { margin-top: 10px; }
+.logged-in #reply-title { margin-bottom: 20px; }
+.logged-in #commentform p.comment-form-comment { margin-top: 10px; }
+.logged-in #commentform p.comment-form-comment label { display: none; }
