--- a/style.css
+++ b/style.css
@@ -78,22 +78,24 @@ single.php
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
+}
+
+.single-container-center {
+    display: flex;
     flex-direction: row;
 }
 
-.single-container-section {
-    width: 80%;
-}
-
-.single-container-sidebar {
-    width: 20%;
-}
 
 .single-comment-container{
     max-width: 1200px;
     margin: 50px auto;
     display: flex;
     flex-direction: row;
+}
+
+.single-container-center-sidebar{
+    padding-left: 40px;
 }
 
 /*--------------------------------------------------------------
@@ -347,11 +349,11 @@ sidebar-donate.php
 --------------------------------------------------------------*/
 .sidebar-official-accounts-container {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .sidebar-official-accounts-container img {
-    width: 100%;
+    max-width: 280px;
     box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -441,20 +443,21 @@ sidebar-ad.php
 comments.php
 --------------------------------------------------------------*/
 .comments-container{
-    width: 80%;
+    width: 100%;
 }
 
 .comment-container-list{
     max-width: 880px;
     position: relative;
-    margin: 0 auto;
     padding-left: 0;
+    margin: 0 auto 0 0;
 }
 
 
 .comments-container-title{
-    margin: 0 auto;
+    max-width: 880px;
     text-align: center;
+    margin: 0;
 }
 
 .comment-container-list ul{
@@ -478,10 +481,10 @@ comments.php
 .comment-respond{
     max-width: 880px;
     position: relative;
-    margin: 0 auto;
 }
 
 .comment-reply-title{
+    max-width: 880px;
     margin: 0 auto;
     text-align: center;
     background: #f1f1f1;
