--- a/style.css
+++ b/style.css
@@ -101,6 +101,11 @@ single.php
 /*--------------------------------------------------------------
 header-ad.php
 --------------------------------------------------------------*/
+.comments {
+    max-width: 880px;
+}
+
+
 .header-ad-container {
     width: 100%;
     max-width: 1200px;
@@ -433,6 +438,7 @@ sidebar-ad.php
     width: 20%;
 }
 
+
 .not-find-container-center-svg {
     max-width: 1200px;
     position: relative;
@@ -444,7 +450,38 @@ sidebar-ad.php
 /*--------------------------------------------------------------
 comments.php
 --------------------------------------------------------------*/
-.comment-author img{
+.comment-body {
+    padding: 10px;
+}
+
+.comment-author-info{
+    display: flex;
+    flex-direction: column;
+    padding-left: 5px;
+}
+
+.comment-date{
+    color: #8e8787;
+}
+
+.comment-author {
+    display: flex;
+}
+
+
+.comment-author img {
     max-width: 40px;
     max-height: 40px;
+    border-radius: 50%;
 }
+
+.comment .comment {
+    padding-left: 5%;
+}
+
+.depth-1 {
+    box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.2);
+    background: white;
+    margin: 20px 0;
+}
+
